--- a/style.css
+++ b/style.css
@@ -1,17 +1,37 @@
 
+body, ul, li {
+
+	margin: 0;
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+}
 body {
 	background-color: white;
 }
 
-
 nav {
 	display: block;
+	background-color: #4c291c;
+	height: 65px;
+	margin-top: 2px;
+
 }
 
-nav li {
-	list-style: none;
+nav a {
+	text-decoration: none;
+	color: white;
+	font-size: 15px;
+	font-weight: 700;
+	padding: 0 15px;
+	transition: opacity 500ms ease-out;
+}
+
+nav ul li {
 	display: inline;
-	text-transform: uppercase;
 	float: right;
-
+	padding-top: 20px 20px 0 0;
+	text-transform: uppercase;
 }
+
+
+
