--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body, ul, li {
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 }
+
+
 body {
 	background-color: white;
 }
@@ -33,5 +35,13 @@ nav ul li {
 	text-transform: uppercase;
 }
 
+.carousel-caption {
+	padding-bottom: 380px;
+
+}
+.carousel-caption h1, p {
+	color: white;
+	
+}
 
 
