--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav p {
 	border: 0;
 }
 
-.container-fluid p {
+.container p {
 	color: gray;
 }
 
@@ -87,52 +87,75 @@ nav p {
 	margin-top: 90px;
 }
 
-
-.container-fluid1 p {
-	font-size: 14;
-	color: gray;
+.divider {
+	border-bottom: 1px solid #898686;
+	width: 900px;
+	margin: 0 auto;
 }
 
-.one {
-	width: 700px;
-	float: center;
-<<<<<<< HEAD
-	border-top: 3px solid #898686;
-}
-
-.two {
-
-	width: 400px;
-	float: center;
-	border-top: 1px solid gray;
-
-=======
+.small-divider {
 	border-top: 1px solid #898686;
+	width: 400px;
+	margin: 0 auto;
+}
+.one {
+	width: 300px;
+	margin: 0 auto;
+	border-top: 1px solid gray;
+
 }
 
 .two {
-
 	width: 300px;
-	float: center;
-	border-top: 1px solid gray;
-
-}
-
-.three {
-	width: 500px;
-	float: center;
+	margin: 0 auto;
 	border-top: 1px solid gray;
 }
-
-.comment i, p{
-	display: inline-block; 
+.comment {
+	text-align: center;
 }
 
-.bottom {
+/*.spacer1 {
+	margin-top: 574px;
+}
+*/
+.comment {
 	display: inline-block;
 }
 
-.bottom p {
-	position: absolute;
->>>>>>> master
+.end {
+	background-image: url(images/bottom.png);
+	max-width: 100%;
 }
+
+.end p {
+	color: gray;
+	text-align: center;
+}
+
+footer {
+	background-image: url(images/footerimg.png);
+	margin: 0 auto;
+	max-width: 100%;
+	max-height: 50px;
+}
+
+footer p {
+	color: gray;
+	display: inline;
+	float: left;
+}
+
+ nav footer ul, li {
+	margin: 0;
+	color: white;
+	text-decoration: none;
+	list-style-type: none;
+	display: inline;
+	padding: 0 25px;
+}
+
+footer li {
+	padding: 0 25px;
+	margin-top: 0 auto;
+}
+
